Have no conversation displayed when landing on message index

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -13,21 +13,15 @@
       <div class="col-8 card sticky-top m-3 conversation-container">
         <p class="card-icon"> <i class="fa-solid fa-message"></i> </p> 
         <p class="card-title"> Conversation </p>
-        <% if current_user.has_one_conversation.present? %>
-          <h2 id="title-conversation" class="offset-md-1">
-            <%=current_user.has_one_conversation.first.friend_message(current_user).full_name%></h2>
-          <div class="p-3 scrollable-list " id="message-display">
-            <%= render 'conversation', locals:  {conversation: @conversation } %>
-          </div>
-          <div id="form-message"></div>
-        <%else%>
+
           <div id="image-conversation" class="offset-md-1"></div>
-          <h2 id="title-conversation" class="offset-md-1"></h2>
-          <div class="p-3 " id="message-display"></div>
+          <h2 id="title-conversation" class="offset-md-1"> Clique sur le om de tes amis pour accéder à la conversation</h2>
+          <div class="p-3 scrollable-list " id="message-display">
+          </div>
           <div id="form-message">
           </div>
         </div>
-       <%end%>
+
     </div>
   </div>
 </div>
