--- a/app/assets/stylesheets/pages/user/__scss/other_user.scss
+++ b/app/assets/stylesheets/pages/user/__scss/other_user.scss
@@ -6,7 +6,14 @@
 
    .user-primary-image{
       img{
-         width: 140px;
+
+         max-height: 140px;
+         min-height: 140px;
+         max-width: 140px;
+         min-width: 140px;
+         object-fit: cover;
+         border-radius: 50%;
+         border: 3px solid orange;
       }
    }
 
