--- a/app/views/connections/_friend_list.html.erb
+++ b/app/views/connections/_friend_list.html.erb
@@ -1,6 +1,6 @@
 <div class='card container-friends-list'>
   <p class="card-title"> Tes Amis </p>
-  <p class="card-icon"> <i class="fa-solid fa-bell"></i> </p>
+  <p class="card-icon"> <i class="fa-solid fa-user"></i> </p>
   <div class="friends-list">
     <ul>
       <% if current_user.friends.length == 0%>
