--- a/app/views/connections/_geoloc.html.erb
+++ b/app/views/connections/_geoloc.html.erb
@@ -1,7 +1,7 @@
 
 <div class="card">
    <p class="card-title"> Geolocalisation </p>
-   <p class="card-icon"> <i class="fa-solid fa-bell"></i> </p> 
+   <p class="card-icon"> <i class="fa-solid fa-map-pin"></i> </p> 
   
 
 
@@ -17,13 +17,18 @@
          </div>
       <%end%>
    </div>
-         <h2> Les Fitters autour de toi: </h2>
-            <ul class="scrollable-list">
+         <h2 class="mt-3"> Les Fitters autour de toi: </h2>
+            <ul class="scrollable-list mt-2">
             <% @users_around.each do |user| %>
                <li class="user-list <%= user.sports_list.join(" ")%>"> 
                <div class="d-flex">
+                <%if user.avatar.attached?%>
+                    <%= image_tag user.avatar, alt: 'avatar', :class => "events-avatar" %>
+                  <%else%>
+                      <%= image_tag "defaultavatar.png", alt: 'avatar', :class => "events-avatar" %>
+                  <%end%>
                   <%= link_to user.full_name, user_path(user),  class:"user-link" %> 
-                  </div>
+               </div>
                </li>
                </li>
           <%end%>
