--- a/app/views/users/_other_user_show.html.erb
+++ b/app/views/users/_other_user_show.html.erb
@@ -6,7 +6,7 @@
       <%if @user.avatar.attached?%>
         <%= image_tag @user.avatar, alt: 'avatar.png' %>
       <%else%>
-        <%= image_tag 'avatar.png' %>
+        <%= image_tag "defaultavatar.png", alt: 'avatar' %> 
       <%end%>
     </div>
     <div class="user-primary-content">
