--- a/app/views/users/performances_show/_climbing_perf_show.html.erb
+++ b/app/views/users/performances_show/_climbing_perf_show.html.erb
@@ -2,22 +2,22 @@
 
 <div class="performance-show-items">
     <div class="performance-show-item">
+      <p class="performance-show-title"> Experience </p>
       <p class="performance-show-data"> <%= user.climbing_exp%> ans </p>
-      <p class="performance-show-title"> D'experience </p>
     </div>
      <div class="perf-divide"> </div>
     <div class="performance-show-item">
+      <p class="performance-show-title"> Frequence </p>
       <p class="performance-show-data"> <%= user.climbing_freq%> /sem  </p>
-      <p class="performance-show-title"> Frequence moyenne </p>
     </div>
      <div class="perf-divide"> </div>
     <div class="performance-show-item">
-      <p class="performance-show-data"> <%= user.last_climbing_perf.level %>  </p>
       <p class="performance-show-title"> Niveau </p>
+      <p class="performance-show-data"> <%= user.last_climbing_perf.level %>  </p>
     </div>
     <div class="perf-divide"> </div>
     <div class="performance-show-item">
-      <p class="performance-show-data"> <%= user.last_climbing_perf.block_color %>  </p>
       <p class="performance-show-title"> Couleur favorite</p>
+      <p class="performance-show-data"> <%= user.last_climbing_perf.block_color %>  </p>
     </div>
 </div>
