--- a/app/views/messages/_friends_list.html.erb
+++ b/app/views/messages/_friends_list.html.erb
@@ -13,7 +13,8 @@
               <%= image_tag "defaultavatar.png", alt: 'avatar', :class => "events-avatar" %>
             <%end%>
             <%if current_user.conversation(friend).present?%>
-              <%= link_to friend.full_name, message_path(current_user.last_message(friend), user: friend), remote: :true, method: :patch, class: "friend-#{friend.id} user-link"%>
+              <div class="<%= %>"></div>
+              <%= link_to friend.full_name, message_path(current_user.last_message(friend), user: friend), remote: :true, method: :patch, class: "friend-#{friend.id} user-link #{current_user.has_unread_message_with(friend) ? "unread" : ""}"%>
             <%else%>
               <%= link_to friend.full_name, messages_path(@message, new: true, user: friend), remote: :true, method: :post, class: "friend-#{friend.id} user-link" %>
             <%end%>
