--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -15,7 +15,7 @@
         <p class="card-title"> Conversation </p>
 
           <div id="image-conversation" class="offset-md-1"></div>
-          <h2 id="title-conversation" class="offset-md-1"> Clique sur le om de tes amis pour accéder à la conversation</h2>
+          <h2 id="title-conversation" class="offset-md-1"> Clique sur le nom de tes amis pour accéder à la conversation</h2>
           <div class="p-3 scrollable-list " id="message-display">
           </div>
           <div id="form-message">
