--- a/app/assets/stylesheets/pages/landing-page/__scss/testimonies.scss
+++ b/app/assets/stylesheets/pages/landing-page/__scss/testimonies.scss
@@ -155,37 +155,74 @@
    }
 }
 
-@media screen and (max-width: 900px)  {
-   .back-img{
-      position: absolute;
-      right: 40px;
-      max-width: 600px;
+@media screen and (max-width: 900px) {
+   .back-img {
+     position: absolute;
+     right: 40px;
+     max-width: 600px;
+     
    }
-
-
-   .cardy-1{
-      position: relative;
-      top: -100px; 
-      left: 5px;
+   .cardy-1 {
+     position: relative;
+     top: -100px;
+     left: 5px;
    }
-
-   .cardy-2{
-      position: relative; 
-      top: 200px; 
-      left: 5px;
+   .cardy-2 {
+     position: relative;
+     top: 200px;
+     left: 5px;
    }
-
-   .cardy-3{
-      position: relative;
-      top: -260px; 
-      left: 5px;
+   .cardy-3 {
+     position: relative;
+     top: -260px;
+     left: 5px;
    }
-
-   .cardy-4{
-      display: none;
+   .cardy-4 {
+     display: none;
    }
-
-   .cardy-5{
-      display: none;
+   .cardy-5 {
+     display: none;
    }
-}
+ }
+ 
+ @media screen and (max-width: 600px) {
+ 
+   .back-img {
+     position: relative;
+     max-width: 500px;
+     max-height: auto;
+     right: 10px;
+     margin-bottom: 0px;
+     bottom: 10px;
+   }
+ 
+   img{
+     max-width: 500px;
+   }
+ 
+   .cardy {
+     width: min-content;
+     height: min-content;
+     width: 90%;
+   }
+   
+   .cardy-1 {
+     position: relative;
+     top: -500px;
+     left: 5px;
+   }
+   .cardy-2 {
+     position: relative;
+     top: -400px;
+     left: 5px;
+   }
+   .cardy-3 {
+     display: none;
+   }
+   .cardy-4 {
+     display: none;
+   }
+   .cardy-5 {
+     display: none;
+   }
+ }
