LL adding time zone for messages

--- a/app/views/messages/_message_display.html.erb
+++ b/app/views/messages/_message_display.html.erb
@@ -10,7 +10,7 @@
         <%end%>
         : <%=message.body%></p>
         <div class="message-time">
-        <p><%=message.created_at.strftime("à %kh%M")%></p>
+        <p><%=message.time%></p>
         </div>
       </div>
   </div>
