--- a/app/assets/stylesheets/root/__scss/root.scss
+++ b/app/assets/stylesheets/root/__scss/root.scss
@@ -149,3 +149,23 @@ form{
 .container{
    padding: 0 !important;
 }
+
+/*********************************/
+/* 	    ALERT ANIMATIONS       */
+/*********************************/
+
+   .alert {
+      animation: cssAnimation 5s forwards;
+  }
+  
+  @keyframes cssAnimation {
+      0%    {opacity: 1;}
+      40%   {opacity: 0.9;}
+      50%   {opacity: 0.8;}
+      60%   {opacity: 0.7;}
+      70%   {opacity: 0.6;}
+      80%   {opacity: 0.3;}
+      100%  {opacity: 0;}
+      
+  }
+  
