--- a/app/views/events/_form_create.html.erb
+++ b/app/views/events/_form_create.html.erb
@@ -2,11 +2,23 @@
         <%= form_with(model: event, local: true, multipart: true) do |form| %>
           <% if event.errors.any? %>
             <div id="error_explanation">
-              <h2><%= pluralize(event.errors.count, "error") %> prohibited this event from being saved:</h2>
+              <h2> 
+              <% event.errors.delete(:sport) %>
+              <% event.errors.delete(:city) %>
+              <%= event.errors.count %>
+                <% if event.errors.count > 1 %>
+                 erreurs ont empêché
+                <% else %>
+                erreur a empêché
+                <% end%>
+                la création de l'event
+              </h2>
 
               <ul>
               <% event.errors.full_messages.each do |message| %>
+              <% if message != "Sport must exist" && message != "City must exist" %>
                 <li><%= message %></li>
+              <% end %>  
               <% end %>
               </ul>
             </div>
