--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,31 @@
+<div id="layer-dark"> </div>
 <div class="container-dashboard">
+    <div class="modal-dialog modalpop" role="document" id="modalId">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Bienvenue dans Fit Feat!</h5>
+      </div>
+      <div class="modal-body">
+        <p class="mb-2"> 💪 Ajoute des sports </p>
+        <p class="mb-2"> 🏆 Renseigne tes performances </p>
+        <p> 🙋🏻‍♂️ Fais toi des amis </p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="button primary" onclick="closeModal()" id="closeBtn">J'ai compris !</button>
+      </div>
+    </div>
+  </div>
+
+
+
   <div class="edit-profil-btn">
     <h1>Ton profil  👨🏻‍🎨</h1> 
     <div><%=link_to "Supprimer le compte", user_path(@user), class: 'button delete-btn', method: :delete, data: { confirm: 'Vous allez supprimer le compte, êtes-vous sûr ?'}%></div>
    </div>
 
+  <p id="id-user-local" style="display:none"> <%=current_user.id%> </p>
+
   <%= render 'edit_info-no-sensitive', user: @user, cities: @cities %>
   <%= render 'edit_info-sensitive', user: @user, cities: @cities %>
-
+  
 </div>
