--- a/app/assets/stylesheets/atoms/__scss/main_pages.scss
+++ b/app/assets/stylesheets/atoms/__scss/main_pages.scss
@@ -2,6 +2,7 @@
    width: 100%;
    max-width: 1900px;
    padding:40px;
+   position: relative;
 
    @media screen and (max-width: 800px) {
       max-width: 100%;
