--- a/app/assets/stylesheets/atoms/__scss/main_pages.css
+++ b/app/assets/stylesheets/atoms/__scss/main_pages.css
@@ -4,15 +4,12 @@
   padding: 40px;
   position: relative;
 }
-
 @media screen and (max-width: 800px) {
   .container-dashboard {
     max-width: 100%;
     padding: 40px 20px;
   }
 }
-
 .container-dashboard h1 {
   font-family: var(--black-font);
-}
-/*# sourceMappingURL=main_pages.css.map */
+}/*# sourceMappingURL=main_pages.css.map */
