--- a/app/assets/stylesheets/pages/_friends/__scss/friend_list.css
+++ b/app/assets/stylesheets/pages/_friends/__scss/friend_list.css
@@ -1,10 +1,6 @@
 .container-friends-list {
-  -webkit-box-flex: 5;
-      -ms-flex: 5;
-          flex: 5;
+  flex: 5;
 }
-
 .container-friends-list li {
   margin-bottom: 10px;
-}
-/*# sourceMappingURL=friend_list.css.map */
+}/*# sourceMappingURL=friend_list.css.map */
