--- a/app/assets/stylesheets/pages/user/__scss/other_user.css
+++ b/app/assets/stylesheets/pages/user/__scss/other_user.css
@@ -1,17 +1,9 @@
 .user-primary-info {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  flex-direction: row;
   gap: 30px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .user-primary-info .user-primary-image img {
   max-height: 140px;
   min-height: 140px;
@@ -22,15 +14,8 @@
   border-radius: 50%;
   border: 3px solid orange;
 }
-
 .user-primary-info .user-primary-content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   gap: 8px;
-}
-/*# sourceMappingURL=other_user.css.map */
+}/*# sourceMappingURL=other_user.css.map */
