--- a/app/assets/stylesheets/pages/landing-page/__scss/features.scss
+++ b/app/assets/stylesheets/pages/landing-page/__scss/features.scss
@@ -106,6 +106,12 @@
 }
 
 @media screen and (max-width:1200px){
+
+   .feature{
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+   }
    .feature-number{
       left: -10px;
      }
