--- a/app/assets/stylesheets/pages/_event/__scss/show_event.scss
+++ b/app/assets/stylesheets/pages/_event/__scss/show_event.scss
@@ -17,6 +17,11 @@
       .img-event{
          display: flex;
          justify-content: center;
+
+         img{
+         object-fit: cover;
+         max-width: 70%;
+         }
       }
    }
 
