--- a/app/assets/stylesheets/pages/landing-page/__scss/contact.scss
+++ b/app/assets/stylesheets/pages/landing-page/__scss/contact.scss
@@ -103,7 +103,7 @@ width: 100vw;
    .img-left{
      width: 700px;
      max-width: 700px;
-      height: auto;
+     height: auto;
    }
  
    .container-right{
@@ -126,8 +126,8 @@ width: 100vw;
    }
 
   .img-left {
-   width: 100%;
-   max-width: 700px;
+   width: 550px;
+   max-width: 550px;
    height: auto;
  }
 
@@ -149,5 +149,4 @@ width: 100vw;
      left: -30px;
      bottom: 200px;
     }
-   
 }
