--- a/app/views/static_pages/_testimonies_lp.html.erb
+++ b/app/views/static_pages/_testimonies_lp.html.erb
@@ -9,7 +9,7 @@
     </div>
 
     <div class="image-container">
-      <div class= "back-img"><%=image_tag "Ellipse.png"%></div>
+      <div class= "back-img"><%=image_tag "Ellipse.png", class:"img-testimonial"%></div>
 
          <div class="cardy cardy-1">
             <div class="top-cardy">
