--- a/app/views/users/_modal.html.erb
+++ b/app/views/users/_modal.html.erb
@@ -1,17 +1,15 @@
-<div class="modal-dialog modalpop" role="document" id="modalId">
+<div class="modal-dialog modalmain modalpop" role="document" id="modalId">
    <div class="modal-content">
    <div class="modal-header">
       <h5 class="modal-title" id="exampleModalLabel"> 🏆 Bienvenue dans Fit Feat !</h5>
    </div>
    <div class="modal-body">
       <p class="mb-2"> FitFeat est une application qui te permet de rencontrer des sportifs autour de toi en fonction de tes performances. </p>
-      <p class="mb-2"> 1️⃣ Commences par rentrer tes informations comme ton prénom, ta ville et une adresse valide ! </p>
-      <p class="mb-2"> 2️⃣ Dans l'onglet 'Performances', choisis tes sports favoris et renseignes-y tes statistiques actuelles !  </p>
-      <p class="mb-2"> 3️⃣ Notre algorithme de recommandation te suggerera alors des sportifs ayant les mêmes performances que toi, ajoutes-les et converses avec eux !  </p>
-      <p> 4️⃣ Participes à des évènements, amuses toi et surtout, vive le sport !  </p>
+	  
+      <p class="mb-2"> Suis ce mini-tuto et proFeat ! </p>
    </div>
    <div class="modal-footer">
-      <button type="button" class="button primary" onclick="closeModal()" id="closeBtn">J'ai compris !</button>
+      <button type="button" class="button primary" onclick="closeModal()" id="closeBtn">Suivant</button>
    	</div>
    	</div>
 </div>
