--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,6 +2,8 @@
 <div class="container-dashboard">
 
   <%= render "modal"%>
+  <%= render "modal2"%>
+  <%= render "modal3"%>
 
 
   <div class="edit-profil-btn">
