--- a/app/assets/stylesheets/pages/landing-page/__scss/testimonies.css
+++ b/app/assets/stylesheets/pages/landing-page/__scss/testimonies.css
@@ -220,6 +220,12 @@
     margin-bottom: 0px;
     bottom: 10px;
   }
+
+  .img-testimonial {
+    max-width: 500px;
+    width: 500px;
+  }
+
   img {
     max-width: 500px;
   }
