--- a/app/assets/stylesheets/pages/landing-page/__scss/testimonies.scss
+++ b/app/assets/stylesheets/pages/landing-page/__scss/testimonies.scss
@@ -32,7 +32,7 @@
    border: 15px solid white;
    box-sizing: border-box;
    border-radius: 8px;
-   background: white;
+   background: var(--white);
    justify-content: space-between;
 
    .top-cardy{
