--- a/app/views/users/_modal2.html.erb
+++ b/app/views/users/_modal2.html.erb
@@ -11,5 +11,5 @@
       <button type="button" class="button primary" onclick="closeModal2()" id="closeBtn"> Suivant</button>
    	</div>
    	</div>
-<%= image_tag "arrow" %>
+<%= image_tag "arrow.png" %>
 </div>
