--- a/app/views/users/_modal3.html.erb
+++ b/app/views/users/_modal3.html.erb
@@ -11,5 +11,5 @@
       <button type="button" class="button primary" onclick="closeModal3()" id="closeBtn">J'ai compris !</button>
    	</div>
    	</div>
-      <%= image_tag "arrow" %>
+      <%= image_tag "arrow.png" %>
 </div>
