check atoms css

--- a/app/assets/stylesheets/pages/user/__scss/other_user.scss
+++ b/app/assets/stylesheets/pages/user/__scss/other_user.scss
@@ -13,7 +13,7 @@
          min-width: 140px;
          object-fit: cover;
          border-radius: 50%;
-         border: 3px solid orange;
+         border: 3px solid var(--orange);
       }
    }
 
