--- a/app/assets/stylesheets/pages/sign_up_log_in-page/__scss/log_in.scss
+++ b/app/assets/stylesheets/pages/sign_up_log_in-page/__scss/log_in.scss
@@ -110,7 +110,7 @@
          height: 10px;
          padding: 0;
          margin: 0;
-         background: #EEB115;
+         background: var(--orange);
          z-index: -1;
       }
    }
